i fixed smthn, correctly works on mobile devices

--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -88,7 +88,7 @@ ul.navbar-nav {
 .navbar-brand {
 	width: 102px;
 	background: url(../imgs/logo.png) left center no-repeat;
-	text-indent: -696969px;
+	text-indent: -9999999;
 }
 
 /* Doctor Who List? */
